# oss-ids

./: .gitignore  CMakeLists.txt  CMakePresets.json  Jenkinsfile  README.md  conanfile.py  config.h.cmake
.github/workflows/: main.yml
SecurityClient/: CMakeLists.txt  Main.cpp  README.md
SecurityClient/app/: SecurityClientApp.cpp
SecurityClient/gtest/app/: SecurityClientApp_test.cpp  StageRuntime_test.cpp
SecurityClient/gtest/config/: SecurityClientConfigLoader_test.cpp
docker/: .env  docker-compose.yml
policy_rule/: sample_policy_config.json  sample_runtime_config.json
